# pdfQnA

./: .gitignore  README.md  app.py  main.py  main2.py  pyproject.toml  requirements.txt  wrong.py
chroma_jina/: chroma.sqlite3
