[project]
name = "pdfQnA"
version = "0.1.0"
description = "a tool to answer your questions related to a PDF (that you upload) "
authors = [
    {name = "Snow", email = "githubwithsnow@gmail.com"},
]
dependencies = ["pdfplumber>=0.11.7", "pdf2image>=1.17.0", "pytesseract>=0.3.13", "langchain>=0.3.27", "langchain-community>=0.3.29", "groq>=0.31.1", "streamlit>=1.49.1", "sentence-transformers>=5.1.0", "chromadb>=1.0.21"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
